--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -37,7 +37,7 @@
                 <div class="input">
                     <input id="login-password" type="password">
                 </div>
-                <button class="forgotPassword">Forgot password?</button>
+                <a href="forgot.html" class="forgotPassword">Forgot password?</a>
             </div>
 
             <button>Sign in</button>
