--- a/templates/auth/forgot.html
+++ b/templates/auth/forgot.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <link rel="icon" href="/images/assets/DepEd.png">
-    <title>DIS-Fotgot Password</title>
+    <title>DIS-Forgot Password</title>
 
 
     <link rel="stylesheet" href="/styles/login.css">
@@ -32,13 +33,15 @@
                 </div>
             </div>
 
-            <button>Send Email</button>
-            <a href="login.html">Back to Login</a>
+            <button id="sendEmailBtn">Send Email</button>
+            <a href="login">Back to Login</a>
         </div>
 
         <div class="credits">
             <p>Built and maintained by <a href="#">CRAMATIX</a></p>
         </div>
     </div>
+
+    <script src="/javascript/forgot.js"></script>
 </body>
 </html>
