--- a/templates/auth/reset.html
+++ b/templates/auth/reset.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" href="/images/assets/DepEd.png" />
-    <title>DIS-Login</title>
+    <title>DIS-Reset Password</title>
+
 
     <link rel="stylesheet" href="/styles/login.css" />
 
-    <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
     <link
       rel="stylesheet"
@@ -19,9 +20,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-  
-  </head>
 
+   
+  </head>
   <body>
     <div class="index">
       <img src="/images/assets/DepEd.png" alt="" />
@@ -31,27 +32,28 @@
       </div>
 
       <div class="titletext">
-        <h1><span>Dep</span><span>Ed</span> Inventory System</h1>
+       <h1>Reset Password!</h1>
       </div>
 
       <div class="container">
         <div class="inputContainer">
-          <label for="login-email">Email</label>
+          <label for="new-password">New Password</label>
           <div class="input">
-            <input id="login-email" type="email" required />
+            <input id="new-password" type="password" required />
+            <i id="toggleNewPassword" class="fa-solid fa-eye-slash" style="display: none;"></i>
           </div>
         </div>
 
         <div class="inputContainer">
-          <label for="login-password">Password</label>
+          <label for="confirm-password">Confirm Password</label>
           <div class="input">
-            <input id="login-password" type="password" required />
-            <i class="fa-solid fa-eye" id="togglePassword"></i>
+            <input id="confirm-password" type="password" required />
+            <i id="toggleConfirmPassword" class="fa-solid fa-eye-slash" style="display: none;"></i>
           </div>
-          <a href="forgot" class="forgotPassword">Forgot password?</a>
         </div>
 
-        <button id="login-btn">Sign in</button>
+        <button id="reset-btn">Reset Password</button>
+        <a href="login">Back to Login</a>
       </div>
 
       <div class="credits">
@@ -59,7 +61,10 @@
       </div>
     </div>
 
-    <script src="/javascript/login.js"></script>
-  
+ <script src="/javascript/reset.js"></script>
+
+ <script>
+    
+ </script>
   </body>
 </html>
