--- a/styles/office.css
+++ b/styles/office.css
@@ -4,9 +4,9 @@
 .sidebar{
     .part{
         .iconOffice{
-            background-color: white;
+            background-color: var(--accentColor);
             i{
-                color: black;
+                color: white;
             }
         }
     }
