--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 @import url(sidebar.css);
+@import url(settings.css);
+@import url(addEmployee.css);
 
+
+:root{
+    --backgroundColor: rgb(215, 215, 215);
+    --containerColor: rgb(250, 250, 250);
+    --textColor: black;
+    --border: rgba(0, 0, 0, .3) solid 1px;
+    --boxShadow: rgba(0, 0, 0, 0.3) 0rem 0rem 0.3rem;
+    --accentColor: #3fb0da;
+}
 
 /* div{
     border: red solid 1px;
@@ -11,11 +22,15 @@
     margin: 0;
     padding: 0;
     font-family: "Lexend", sans-serif;
-    color: white;
+    color: var(--textColor);
+    /* border: green solid 1px; */
 }
 
+
+
 body{
-    background-color: rgb(12, 12, 12);
+    background-color: var(--backgroundColor);
+    /* background-color: rgb(12, 12, 12); */
 }
 
 .wrapMain{
@@ -27,12 +42,19 @@ body{
 
     .con{
         flex-grow: 1;
-        border: rgba(255, 255, 255, 0.1) solid 1px;
-        background-color: rgb(23, 23, 23);
+        border: var(--border);
+        /* background-color: rgb(23, 23, 23); */
+        background-color: var(--containerColor);
+        /* background-color: rgb(232, 232, 232); */
         border-radius: 0.3rem;
         padding: 1rem;
         box-sizing: border-box;
-        
+        box-shadow: var(--boxShadow);
+
+        h3{
+            padding-bottom: 0.8rem;
+            border-bottom: black solid 1px;
+        }
     }
 }
 
