--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,7 @@
 @import url(settings.css);
 @import url(addEmployee.css);
 
-
-:root{
+:root {
     --backgroundColor: rgb(215, 215, 215);
     --containerColor: rgb(250, 250, 250);
     --textColor: black;
@@ -14,47 +13,76 @@
     --accentColor: #3fb0da;
 }
 
-/* div{
-    border: red solid 1px;
-} */
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Lexend", sans-serif;
     color: var(--textColor);
-    /* border: green solid 1px; */
 }
 
 
-
-body{
+body {
     background-color: var(--backgroundColor);
-    /* background-color: rgb(12, 12, 12); */
 }
 
-.wrapMain{
+
+.wrapMain {
     min-height: 100vh;
     display: flex;
     padding: 1rem;
     box-sizing: border-box;
     gap: 1rem;
+}
 
-    .con{
-        flex-grow: 1;
-        border: var(--border);
-        /* background-color: rgb(23, 23, 23); */
-        background-color: var(--containerColor);
-        /* background-color: rgb(232, 232, 232); */
-        border-radius: 0.3rem;
+
+.wrapMain .con {
+    flex-grow: 1;
+    border: var(--border);
+    background-color: var(--containerColor);
+    border-radius: 0.3rem;
+    padding: 1rem;
+    box-sizing: border-box;
+    box-shadow: var(--boxShadow);
+}
+
+.wrapMain .con h3 {
+    padding-bottom: 0.8rem;
+    border-bottom: black solid 1px;
+}
+
+@media screen and (max-width: 767px) {
+    .wrapMain {
+        flex-direction: column;
+        padding: 0.5rem;
+        gap: 0.5rem;
+        width: 100vw;
+        overflow-x: hidden;
+    }
+
+    .wrapMain .con {
+        width: 100%;
+        margin-bottom: 4.5rem; 
+    }
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .wrapMain {
+        flex-direction: row;
+        flex-wrap: nowrap;
         padding: 1rem;
+        gap: 1rem;
         box-sizing: border-box;
-        box-shadow: var(--boxShadow);
+        overflow-x: hidden;
+    }
 
-        h3{
-            padding-bottom: 0.8rem;
-            border-bottom: black solid 1px;
-        }
+    .wrapMain .con {
+        flex: 1;
+        width: 100%;
+        max-width: calc(100% - 5.5rem); 
     }
 }
 
+    
+}
