--- a/styles/addEmployee.css
+++ b/styles/addEmployee.css
@@ -1,4 +1,5 @@
 /*Eto yung sa file upload at preview */
+
 .custom-file-upload {
     display: inline-flex;
     align-items: center;
@@ -6,8 +7,13 @@
     gap: 0.5rem;
     padding: 0.5rem 1rem;
     background-color: var(--accentColor);
-    color: white;
+    color: black;
+    max-width: 21rem;
+    width: 100%;
+   
+
     border-radius: 0.3rem;
+
     cursor: pointer;
     font-size: 0.85rem;
     transition: background-color 0.3s ease;
@@ -37,6 +43,24 @@
     border: var(--border);
     box-shadow: var(--boxShadow);
   }
+
+  #edit-photo-preview {
+    margin-top: 0.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #edit-photo-preview img {
+   
+    max-width: 100%;
+    max-height: 150px;
+    border-radius: 0.5rem;
+    object-fit: cover;
+    border: var(--border);
+    box-shadow: var(--boxShadow);
+  }
+  
 
   /*Eto yung sa file upload at preview */
 
