--- a/templates/auth/html/code.html
+++ b/templates/auth/html/code.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link rel="icon" href="/images/assets/DepEd.png" />
+  <link rel="icon" href="/images/assets/baliwasan.png" />
   <title>DIS-Forgot Password</title>
 
   <link rel="stylesheet" href="/styles/login.css" />
@@ -14,7 +14,7 @@
     <img src="/images/assets/DepEd.png" alt="" />
     
     <div class="logo">
-      <img src="/images/assets/DepEd.png" alt="" />
+      <img src="/images/assets/baliwasan.png" alt="" />
     </div>
 
     <div class="titletext">
