--- a/templates/auth/html/forgot.html
+++ b/templates/auth/html/forgot.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-    <link rel="icon" href="/images/assets/DepEd.png">
+    <link rel="icon" href="/images/assets/baliwasan.png" />
     <title>DIS-Forgot Password</title>
 
 
@@ -18,7 +18,7 @@
         <img src="/images/assets/DepEd.png" alt="">
         
         <div class="logo">
-            <img src="/images/assets/DepEd.png" alt="">
+            <img src="/images/assets/baliwasan.png" alt="">
         </div>
 
         <div class="titletext">
