--- a/templates/auth/html/reset.html
+++ b/templates/auth/html/reset.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="/images/assets/DepEd.png" />
+    <link rel="icon" href="/images/assets/baliwasan.png" />
     <title>DIS-Reset Password</title>
 
 
@@ -28,7 +28,7 @@
       <img src="/images/assets/DepEd.png" alt="" />
 
       <div class="logo">
-        <img src="/images/assets/DepEd.png" alt="" />
+        <img src="/images/assets/baliwasan.png" alt="" />
       </div>
 
       <div class="titletext">
