--- a/styles/settings.css
+++ b/styles/settings.css
@@ -1,78 +1,109 @@
-.settings{
-    position: absolute;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(0.3rem);
-    left: 0;
-    top: 0;
+.settings {
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(0.3rem);
+  left: 0;
+  top: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  box-sizing: border-box;
+
+  .esc {
+    width: 25rem;
+    max-width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: end;
+    > button {
+      all: unset;
+      height: 2rem;
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+      background-color: var(--backgroundColor);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      border: var(--border);
+      transition: all 0.3s ease;
+
+      &:hover {
+        background-color: var(--containerColor);
+      }
+    }
+  }
+
+  .setCon {
+    background-color: var(--containerColor);
+    width: 25rem;
+    max-width: 100%;
+    border-radius: 0.5rem;
+    border: var(--border);
+    box-shadow: var(--boxShadow);
+    padding: 1rem;
+    box-sizing: border-box;
+    display: flex;
     flex-direction: column;
     gap: 1rem;
 
-    .esc{
-        width: 30rem;
-        max-width: 100%;
-        display: flex;
-        justify-content: end;
-        > button{
-            all: unset;
-            height: 2rem;
-            aspect-ratio: 1/1;
-            border-radius: 50%;
-            background-color: var(--backgroundColor);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            border: var(--border);
-            transition: all 0.3s ease;
-
-            &:hover{
-                background-color: var(--containerColor);
-            }
-        }
+    h4 {
+      width: 100%;
+      padding-bottom: 0.5rem;
+      border-bottom: black solid 1px;
     }
 
-    
-
-    .setCon{
-        background-color: var(--containerColor);
-        width: 30rem;
-        max-width: 100%;
-        height: 30rem;
-        border-radius: 0.5rem;
-        border: var(--border);
-        box-shadow: var(--boxShadow);
-        padding: 1rem;
-        box-sizing: border-box;
-        display: flex;
-        gap: 0.3rem;
-
-        .perSet{
-            width: 8rem;
-            >h4{
-                font-weight: 500;
-                font-size: 1rem;
-
-            }
-            input[type="radio"]{
-                all: unset;
-                display: none;
-            }
-            input[type="radio"]:checked + label{
-                background-color: red;
-            }
-            label{
-                width: 100%;
-                padding: 0.2rem 0.5rem;
-            }
+    .sec {
+      .listColors {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        place-items: center;
+        gap: 0.5rem;
+        margin-top: 0.5rem;
+        .colors {
+          width: 100%;
+          aspect-ratio: 1/1;
+          background-color: aqua;
+          box-sizing: border-box;
+          border-radius: 0.3rem;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          p {
+            font-size: 0.8rem;
+          }
         }
-        div:nth-child(2){
-            border: var(--textColor) solid 1px;
+        .color1 {
+          background-color: #3fb0da;
         }
+        .color2 {
+          background-color: #c00000;
+        }
+        .color3 {
+          background-color: #e4750e;
+        }
+        .color4 {
+          background-color: #f1ce07;
+        }
+        .color5 {
+          background-color: #37f026;
+        }
+        .color6 {
+          background-color: #0d5aff;
+        }
+        .color7 {
+          background-color: #740291;
+        }
+        .color8 {
+          background-color: #ff45d1;
+        }
+      }
     }
+  }
 }
