--- a/styles/style.css
+++ b/styles/style.css
@@ -1,88 +1,87 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 @import url(sidebar.css);
 @import url(settings.css);
 @import url(addEmployee.css);
+@import url(quickAccess.css);
 
 :root {
-    --backgroundColor: rgb(215, 215, 215);
-    --containerColor: rgb(250, 250, 250);
-    --textColor: black;
-    --border: rgba(0, 0, 0, .3) solid 1px;
-    --boxShadow: rgba(0, 0, 0, 0.3) 0rem 0rem 0.3rem;
-    --accentColor: #3fb0da;
+  --backgroundColor: rgb(215, 215, 215);
+  --containerColor: rgb(250, 250, 250);
+  --textColor: black;
+  --border: rgba(0, 0, 0, 0.3) solid 1px;
+  --boxShadow: rgba(0, 0, 0, 0.3) 0rem 0rem 0.3rem;
+  --accentColor: #b30000;
+
+  /* default accent color #3fb0da */
 }
 
+/* div {
+  border: red solid 1px;
+} */
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Lexend", sans-serif;
-    color: var(--textColor);
+  margin: 0;
+  padding: 0;
+  font-family: "Lexend", sans-serif;
+  color: var(--textColor);
 }
-
 
 body {
-    background-color: var(--backgroundColor);
+  background-color: var(--backgroundColor);
 }
-
 
 .wrapMain {
-    min-height: 100vh;
-    display: flex;
-    padding: 1rem;
-    box-sizing: border-box;
-    gap: 1rem;
+  min-height: 100vh;
+  display: flex;
+  padding: 1rem;
+  box-sizing: border-box;
+  gap: 1rem;
 }
 
-
 .wrapMain .con {
-    flex-grow: 1;
-    border: var(--border);
-    background-color: var(--containerColor);
-    border-radius: 0.3rem;
-    padding: 1rem;
-    box-sizing: border-box;
-    box-shadow: var(--boxShadow);
+  flex-grow: 1;
+  border: var(--border);
+  background-color: var(--containerColor);
+  border-radius: 0.3rem;
+  padding: 1rem;
+  box-sizing: border-box;
+  box-shadow: var(--boxShadow);
 }
 
 .wrapMain .con h3 {
-    padding-bottom: 0.8rem;
-    border-bottom: black solid 1px;
+  padding-bottom: 0.8rem;
+  border-bottom: black solid 1px;
 }
 
 @media screen and (max-width: 767px) {
+  .wrapMain {
+    flex-direction: column;
+    padding: 0.5rem;
+    gap: 0.5rem;
+    width: 100vw;
+    overflow-x: hidden;
+  }
+
+  .wrapMain .con {
+    width: 100%;
+    margin-bottom: 4.5rem;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
     .wrapMain {
-        flex-direction: column;
-        padding: 0.5rem;
-        gap: 0.5rem;
-        width: 100vw;
-        overflow-x: hidden;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      padding: 1rem;
+      gap: 1rem;
+      box-sizing: border-box;
+      overflow-x: hidden;
     }
 
     .wrapMain .con {
-        width: 100%;
-        margin-bottom: 4.5rem; 
+      flex: 1;
+      width: 100%;
+      max-width: calc(100% - 5.5rem);
     }
-
-
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    .wrapMain {
-        flex-direction: row;
-        flex-wrap: nowrap;
-        padding: 1rem;
-        gap: 1rem;
-        box-sizing: border-box;
-        overflow-x: hidden;
-    }
-
-    .wrapMain .con {
-        flex: 1;
-        width: 100%;
-        max-width: calc(100% - 5.5rem); 
-    }
-}
-
-    
+  }
 }
