--- a/styles/items.css
+++ b/styles/items.css
@@ -11,3 +11,15 @@
         }
     }
 }
+
+
+#searchCategory{
+    padding: 8px 12px;
+    width: 100%;
+    max-width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+  }
+
+
+
