--- a/styles/addOffPos.css
+++ b/styles/addOffPos.css
@@ -1,35 +1,34 @@
-.office-entry, .position-entry {
+.office-entry, .position-entry ,.category-entry{
   margin-bottom: 20px;
   padding: 15px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* subtle shadow */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
   border-radius: 5px;
   position: relative;
 }
 
   
-  .remove-office ,.remove-position {
-    position: absolute;
-    top: 0px;
-    right: 8px;
-    background-color: transparent;
-    color: Black;
-    border: none;
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-
-  }
-  
+.remove-office, .remove-position, .remove-category {
+  position: absolute;
+  top: 0px;
+  right: 8px;
+  background-color: transparent;
+  color: Black;
+  border: none;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
   
-  #offices-container,#position-container {
+
+  
+  #offices-container,#position-container,#categories-container {
     margin-bottom: 20px;
   }
   .add-more {
