--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -32,6 +32,7 @@
 }
 
 .sidebar .part:hover label {
+
   opacity: 1;
   left: calc(100% + 0.5rem);
 }
@@ -54,6 +55,7 @@
 
 .sidebar .part label {
   font-size: 0.7rem;
+z-index: 1001;
   pointer-events: none;
   background-color: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(1rem);
@@ -71,6 +73,7 @@
 }
 
 .sidebar .set {
+
   position: absolute;
   bottom: 1rem;
   width: calc(100% - 2rem);
@@ -102,8 +105,8 @@
 }
 
 .sidebar .set .acc img {
-  width: 100%;
-  height: 100%;
+  width: 34.44px;
+  height: 34.44px;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -134,14 +137,17 @@
 }
 
 .sidebar .set .acc .tooltip > * {
+  
   color: black;
 }
 
 .sidebar .set .acc .tooltip p {
+
   font-size: 0.8rem;
 }
 
 .sidebar .set .acc .tooltip a {
+
   font-size: 0.8rem;
   cursor: pointer;
   padding: 0.2rem;
@@ -253,3 +259,5 @@
     }
   }
 }
+
+ 
