--- a/templates/auth/html/code.html
+++ b/templates/auth/html/code.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="icon" href="/images/assets/baliwasan.png" />
-  <title>DIS-Forgot Password</title>
+  <title>BCSI-Forgot Password</title>
 
   <link rel="stylesheet" href="/styles/login.css" />
 </head>
