--- a/templates/auth/html/forgot.html
+++ b/templates/auth/html/forgot.html
@@ -7,7 +7,7 @@
 
 
     <link rel="icon" href="/images/assets/baliwasan.png" />
-    <title>DIS-Forgot Password</title>
+    <title>BCSI-Forgot Password</title>
 
 
     <link rel="stylesheet" href="/styles/login.css">
